[PT#150124215] Fixed various layout issues

--- a/src/sass/_muifixes.scss
+++ b/src/sass/_muifixes.scss
@@ -50,9 +50,6 @@ button[type=button] {
 }
 
 // To negate the spacing fix for column inside a form
-@media (max-width: 768px) {
-  div.columns.action-buttons > .column {
-    padding-top: 6px !important;
-    padding-bottom: 6px !important;
-  }
+div.columns.action-buttons > .column {
+    margin: 6px 0 !important
 }
